# Scrapy-Scrapper

./: README.md  authors.json  main.py  pyproject.toml  quotes.json
quotes_spyder/: authors.json  quotes.json  scrapy.cfg
quotes_spyder/quotes_spyder/: items.py  middlewares.py  pipelines.py  settings.py
quotes_spyder/quotes_spyder/spiders/: authors.py  quotes.py
